@@ -45,11 +45,13 @@ WriteMakefile(
                'Test::More'          => 0,
             },
             recommends => {
+               'DateTime::TimeZone'  => 1.53,  # Tests are skipped with earlier versions.
                'Test::Pod'           => 1.22,
             },
          },
          develop => {
             requires => {
+               'DateTime::TimeZone'  => 1.53,  # Key tests are skipped with earlier versions.
                'FindBin'             => 0,
                'Pod::Coverage'       => 0.18,
                'Test::Pod::Coverage' => 1.08,
