@@ -1,6 +1,7 @@
 Revision history for DateTimeX-Start
 
 1.2.0   ~~~/~~/~~
+        Skip tests requiring newer DateTime::TimeZone than the one installed.
         ~~~
 
 1.0.0   2016/04/24
